--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "normalize.css": "^8.0.1",
     "vue": "^3.5.13"
   },
   "devDependencies": {
@@ -17,6 +18,8 @@
     "eslint": "^9.16.0",
     "eslint-plugin-vue": "^9.32.0",
     "globals": "^15.13.0",
+    "sass": "^1.82.0",
+    "sass-loader": "^16.0.4",
     "vite": "^6.0.1"
   }
 }
