--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist",
+    "predeploy": "npm run build"
   },
   "dependencies": {
     "normalize.css": "^8.0.1",
@@ -17,6 +19,7 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "eslint": "^9.16.0",
     "eslint-plugin-vue": "^9.32.0",
+    "gh-pages": "^6.2.0",
     "globals": "^15.13.0",
     "sass": "^1.82.0",
     "sass-loader": "^16.0.4",
